# Qt--Calculator

./: .gitignore  CMakeLists.txt  ExpressionEvaluator.cpp  ExpressionEvaluator.h  ReadMe  ignore.gitignore  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
